2010-08-07 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Bump version number after unstable release.

	Implement auto-save feature.

	* src/core/na-ipivot-consumer.c:
	* src/core/na-ipivot-consumer.h (on_autosave_changed): New interface.

	* src/core/na-iprefs.c:
	* src/core/na-iprefs.h (na_iprefs_read_uint): New function.

	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h (nact_iprefs_read_uint): Removed function.

	* src/core/na-pivot.c (on_preferences_change):
	Trigger NAIPivotConsumer interface when autosave is changed.

	* src/nact/nact-main-menubar-file.c:
	* src/nact/nact-main-menubar-file.h
	(nact_main_menubar_file_set_autosave): New function.

	* src/nact/nact-main-window.c (ipivot_consumer_on_autosave_changed):
	Implement the new on_autosave_changed() NAIPivotConsumer interface.

	* src/nact/nact-preferences-editor.c (on_base_runtime_init_dialog):
	Replace nact_iprefs_read_uint() with na_iprefs_read_uint().

	Setup auto-save in preferences.

	* data/nautilus-actions-prefs.schemas.in:
	Describe new auto-save-on and auto-save-period preference keys.

	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h
	(nact_iprefs_read_uint,	nact_iprefs_write_uint): New functions.
	IPREFS_AUTOSAVE_ON, IPREFS_AUTOSAVE_PERIOD: New preference keys.

	* src/nact/nact-preferences-editor.c:
	Update the new auto-save-on and auto-save-period preference keys.


	* src/nact/nact-preferences.ui:
	* src/nact/nautilus-actions-config-tool.ui: New preference frame.

2010-08-05 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c
	(na_core_utils_str_get_first_word): Removed function.
	(na_core_utils_str_split_first_word): New function.

	* src/io-desktop/nadp-reader.c
	(nadp_reader_ifactory_provider_read_done):
	Split the Exec content to get Path and Parameters data.

	* src/core/na-object-profile-factory.c:
	Review the description of the NAFO_DATA_PARAMETERS data.

	* src/core/na-tokens.h: Update the comment.
